--- a/4-25/4-25.html
+++ b/4-25/4-25.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="top">
-        <h2 id="a">利銓玻璃</h2>
+        <h2 id="a">利銓玻璃 大師姊</h2>
         <b>首頁</b>
         <b>理念</b>
         <b>最新消息</b>
